--- a/StyleGAN_edit_images.ipynb
+++ b/StyleGAN_edit_images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "StyleGAN_edit_images",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZx4F88dj055V5dfcaY5kO",
+      "authorship_tag": "ABX9TyOEVXsDA3tm8OVMfS/HKY8W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "lZDxWvNvRXSW",
-        "outputId": "43fc8ded-9c4c-4035-f276-390c370bd57b",
         "colab": {
           "resources": {
             "http://localhost:8080/nbextensions/google.colab/files.js": {
@@ -94,7 +93,8 @@
           },
           "base_uri": "https://localhost:8080/",
           "height": 39
-        }
+        },
+        "outputId": "43fc8ded-9c4c-4035-f276-390c370bd57b"
       },
       "source": [
         "#@title Upload your images {display-mode: \"form\"}\n",
@@ -356,8 +356,13 @@
         "# Get latent vectors\n",
         "w_input = np.load(\"latents/\" + input_picker.value + \".npy\")\n",
         "w_exemplar = np.load(\"latents/\" + exemplar_picker.value + \".npy\")\n",
+        "\n",
         "# Calculate edit distance\n",
         "effect_coef = 2 * scale.value * morph_coefficient(w_input, w_exemplar, boundary, map_k=5)\n",
+        "if (feature_picker.value == \"smile\"):\n",
+        "    effect_coef = 7 * morph_coefficient(w_input, w_exemplar, boundary, map_k=7)   #TODO: need to get it from maps [4-6]\n",
+        "    effect_coef -= 5 * morph_coefficient(w_input, w_exemplar, boundary, map_k=5)\n",
+        "    effect_coef *= 2 * scale.value\n",
         "\n",
         "# Show initial prediction, obtained with just linear shift\n",
         "print(\"\\nInitial rough feature transfer prediction (not final result):\")\n",
@@ -376,7 +381,7 @@
         "\n",
         "# Show final result image\n",
         "_, generated_image = latent_optimizer(torch.from_numpy(res).to(device))\n",
-        "g = get_image_numpy(generated_image)\n",
+        "g = get_image_numpy(generated_image, saturate=True)\n",
         "display(Image.fromarray(g).resize((512,512)))"
       ],
       "execution_count": null,
