--- a/StyleGAN_edit_images.ipynb
+++ b/StyleGAN_edit_images.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "StyleGAN_edit_images",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEVXsDA3tm8OVMfS/HKY8W",
+      "authorship_tag": "ABX9TyOD6Oa8mPDVtAR8FjReiv+L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,9 +46,7 @@
         "\n",
         "!git clone https://github.com/Andre6o6/stylegan-editing.git stylegan_editing\n",
         "%cd stylegan_editing\n",
-        "\n",
-        "#TODO as submodule\n",
-        "!git clone https://github.com/genforce/interfacegan.git\n",
+        "!git submodule update --init\n",
         "\n",
         "# Load pretrained models\n",
         "!gdown --id 1r3Qygz6DaXtQwkUbd35ucA2U4hayj32m\n",
@@ -110,7 +108,7 @@
         "for fn in uploaded.keys():\n",
         "    os.rename(fn, os.path.join(\"raw_images\", fn))"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
